ISSUE #227 - Fixed showing all licenses on license page, fixed errors appearing in console regarding billing/quota info

--- a/frontend/termsAndConditions/jade/termsAndConditionsText.jade
+++ b/frontend/termsAndConditions/jade/termsAndConditionsText.jade
@@ -41,7 +41,7 @@ ol
 					|  or
 					=" "
 					strong we
-					| ). We are a limited company registered in England and Wales under company number 09014101, whose registered office is at 3BLc/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK.
+					| ). We are a limited company registered in England and Wales under company number 09014101, whose registered office is at 3BL c/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK. Our registered VAT number is GB 206 9090 15.
 			li
 				p.level-2-number
 					| These Terms of Use constitute a legal agreement between 3D Repo and you as a User (as defined below) of the Service. By accessing the Service using any means, you agree to be bound by these Terms of Use. If you do not agree to abide by these Terms of Use, you may not access the Service.
@@ -62,10 +62,10 @@ ol
 					| ). Users may hold a Subscription (as defined below) or be invited by a paid Subscriber as a Collaborator (as defined below).
 			li
 				p.level-2-number
-					| Users must use the Service in a business capacity, and you must confirm whether you are operating as an individual (sole trader) or through an incorporated entity such as a private limited company, an LLP, or a partnership. You represent to us that you are duly authorised to access the Service on behalf of your business and that you have the power and authority to bind the business as a User in accordance with these Terms of Use.
+					| Users may use the Service in a business capacity or in a private capacity as a consumer (for example for domestic, academic purposes or for leisure or hobby interests). When you register with us you must confirm whether you are operating as a consumer, an individual sole trader or through an incorporated entity such as a private limited company, an LLP, or a partnership.
 			li
 				p.level-2-number
-					| The Service is not intended for use by private individuals for domestic or private purposes, or otherwise as a consumer.
+					| If you are acting in a business capacity, you represent to us that you are duly authorised to access the Service on behalf of your business and that you have the power and authority to bind the business as a User in accordance with these Terms of Use.
 			li
 				p.level-2-number
 					| To become a User, you must complete all of the required fields set out in the registration process. You confirm to us that any registration information provided to us is complete, accurate and not misleading. Fake User profiles are not permitted.
@@ -74,7 +74,7 @@ ol
 					| If you are subscribing to the Service as a paid User (even if we are offering you an initial period of free subscription) (a
 					=" "
 					strong Subscription
-					| ) we will request that you provide payment card details to our payment processing provider. Any payment card details you give us will not be stored by us and will be encrypted and stored securely by our payment processing provider. We reserve the right to suspend provision of the Service until such time as we have confirmed that you have provided valid payment card details.
+					| ) we will request that you provide payment card details to our payment processing provider. We do not store credit card details ourselves; they will be encrypted and stored securely by our payment processing provider. We reserve the right to suspend provision of the Service until such time as we have confirmed that you have provided valid payment card details.
 			li
 				p.level-2-number
 					a(name='_Ref421733767')
@@ -90,7 +90,7 @@ ol
 					| Your Subscription with 3D Repo will be for the period notified in the registration process. Your Subscription will automatically renew for additional periods of equal duration unless it is ended in accordance with these Terms of Use, in particular clause 11.
 			li
 				p.level-2-number
-					| The Service is intended for use worldwide. Wherever you access and use the Service from, you agree that you will only use the Service in a manner consistent with these Terms of Use and any and all applicable local, national and international laws and regulations. To the extent that your use of the Service is not legal in your territory, you may not use the Service. Please contact us at support@3drepo.org if you require further information about our Service in order to make this assessment.
+					| The Service is intended for use worldwide, as long as it is legal for us to provide it and for you to receive it. Wherever you access and use the Service from, you agree that you will only use the Service in a manner consistent with these Terms of Use and any and all applicable local, national and international laws and regulations. To the extent that your use of the Service is not legal in your territory, you may not use the Service. Although we cannot provide you with legal advice, please contact us at support@3drepo.org if you require further information about our Service and we will try to help you to make this assessment.
 			li
 				p.level-2-number
 					| You are responsible for making all arrangements necessary for you to have access to the Service.
@@ -133,7 +133,7 @@ ol
 			li
 				p.level-2-number
 					strong The Service
-					|  consists of access to the 3D Repo platform and associated services. Access to certain 3D Repo functionality will require a paid Subscription. Users holding a Subscription will be able to invite others to access the Service as Collaborators. We will notify you of the applicable limit on the number of Collaborators you may invite.
+					|  consists of access to the 3D Repo platform and associated services as summarised on our website and associated documentation. Access to certain 3D Repo functionality will require a paid Subscription. Users holding a Subscription will be able to invite others to access the Service as Collaborators. We will notify you of the applicable limit on the number of Collaborators you may invite.
 			li
 				p.level-2-number
 					| On condition of you agreeing to abide by these Terms of Use, we hereby grant you a non-transferable, non-exclusive licence while you remain a User to access the Service in accordance with these Terms of Use.
@@ -141,6 +141,9 @@ ol
 				p.level-2-number
 					a(name='_Ref423704528')
 					|  If your receipt of the Service is subject to third party terms, we will notify these to you either within these Terms of Use or by obtaining your express acknowledgement of them when you access the relevant part of the Service.
+			li
+				p.level-2-number
+					| If our supply of the Service is delayed, suspended or prevented by an event outside our control then we will take steps to minimise the effect of the event. If there is a substantial delay you may contact us to end your Subscription and receive a refund for Services you have paid for but not received.
 	li
 		p
 			span(style='font-family: Verdana, sans-serif;')
@@ -155,16 +158,16 @@ ol
 					| ) are as notified to you (including as set out on the 3drepo.io website) from time to time. Access to certain functionality may be granted by us fee of charge in our discretion to Users who have not taken a Subscription.
 			li
 				p.level-2-number
-					| Unless indicated otherwise by us, the Charges are payable monthly in advance via our chosen payment processor using the payment card details provided by the User. 3D Repo does not directly store any payment card details. We do not store credit card details.
+					| Unless indicated otherwise by us, the Charges are payable monthly in advance via our chosen payment processor using the payment card details provided by the User. 3D Repo does not store any payment card details.
 			li
 				p.level-2-number
 					| We reserve the right to suspend the provision of the Service in the event that Charges are not paid when due.
 			li
 				p.level-2-number
-					| Unless expressly stated otherwise, Charges are exclusive of all VAT or equivalent tax and other applicable taxes, which you agree to pay in addition.
+					| Unless expressly stated otherwise, Charges are exclusive of all VAT or equivalent tax, which will be charged where appropriate.
 			li
 				p.level-2-number
-					| We reserve the right to change the Charges at any time on written notice to you (including by email). If you do not wish to continue with your Subscription under the new Charges, you may end it in accordance with clause 11.1.
+					| We reserve the right to change the Charges at any time on written notice to you (including by email). If you do not wish to continue with your Subscription under the new Charges, you may end it in accordance with clause 11.
 	li
 		p
 			span(style='font-family: Verdana, sans-serif;')
@@ -275,7 +278,7 @@ ol
 			li
 				p.level-2-number
 					a(name='_Ref419928536')
-					|  We do not guarantee that the Service will always be available or that access to it will be uninterrupted. Access to the Service is permitted on a temporary basis. We may suspend, withdraw or discontinue or any part of the Service without notice. We will not be liable to you if, for any reason, the Service is unavailable at any time or for any period.
+					|  We do not guarantee that the Service will always be available or that access to it will be uninterrupted. Access to the Service is permitted on a temporary basis. We may suspend, withdraw or discontinue all or any part of the Service without notice. We will not be liable to you if, for any reason, the Service is unavailable at any time or for any period.
 			li
 				p.level-2-number In relation to the use of the Service:
 				ol
@@ -311,7 +314,7 @@ ol
 					|  We use reasonable endeavours to remove bugs, viruses or other malware but we do not guarantee that the Service will be secure or free from bugs or viruses. You should use your own virus protection software. We will not be liable for any loss or damage caused by a virus, distributed denial-of-service attack or other technologically harmful material that may infect your computer equipment, computer programs, data or other proprietary material due to your use of the Service.
 			li
 				p.level-2-number
-					| Subject to clauses 9.1 to 9.4, our total liability, whether in contract, tort (including negligence), for breach of statutory duty, or otherwise, arising under or in connection with these Terms of Use including the receipt of the Service shall be limited to the Charges paid for the Service in the 12 month period prior to the date on which the claim arose.
+					| Subject to clauses 9.1 to 9.4, our total liability, whether in contract, tort (including negligence), for breach of statutory duty, or otherwise, arising under or in connection with these Terms of Use including the receipt of the Service shall be limited to the Charges paid for the Service in the 12-month period prior to the date on which the claim arose.
 			li
 				p.level-2-number
 					| You agree to indemnify us in respect of all loss or damage whatsoever arising from your breach of these Terms of Use.
@@ -392,10 +395,15 @@ ol
 			li
 				p.level-2-number
 					a(name='_Ref416382868')
-					|  You may end your Subscription (or other access as a User) at any time by notifying us using the relevant section of the Service. Your Subscription and any other right to receive the Service will end immediately, but you acknowledge that you will not receive any refund of Charges already paid in advance in relation to the remainder of the relevant Subscription period. Furthermore, if for any reason at the date of termination you owe us any Charges, we will take payment for such sums via our chosen payment processor, or issue an invoice to you for payment.
+					a(name='_Ref457301124')
+					strong Consumer cancellation right:
+					|  If you are registered to use the Service as a consumer, you have up to 14 days from the date on which we confirm our acceptance of your registration (the “cancellation period”), to cancel your Subscription with us and your receipt of the Services, without giving any reason. You may do this by completing the model cancellation form set out at the end of these Terms of Use and sending it to us at support@3drepo.org. We will reimburse payments received from you no later than 14 days after receipt of your cancellation notification. However you acknowledge that, by logging in to use the Service within the cancellation period, you are expressly requesting that we begin the provision of the Service to you. In that case, you agree that you will pay for the Service received during the period up to your cancellation.
 			li
 				p.level-2-number
-					| We will determine, in our discretion, whether there has been a breach of these Terms of Use through any use by you of the Service. If such a breach has occurred, we may take such action as we deem appropriate, including all or any of the following actions:
+					| All Users may end their Subscription (or other access as a User) at any time by notifying us using the relevant section of the Service. Your Subscription and any other right to receive the Service will end at the end of the then-current Subscription period. However, you acknowledge that, where you are ending your Subscription without cause, you will not receive any refund of Charges already paid in advance in relation to the remainder of the relevant Subscription period. Furthermore, if for any reason at the date of termination you owe us any Charges, we will take payment for such sums via our chosen payment processor, or issue an invoice to you for payment.
+			li
+				p.level-2-number
+					| We will determine, in our discretion, whether there has been a breach of these Terms of Use through any use by you of the Service. If such a breach has occurred, we may take such action as we deem appropriate in the circumstances, including all or any of the following actions:
 				ol
 					li
 						p.level-2-number
@@ -417,8 +425,12 @@ ol
 					a(name='_Ref370918798')
 					|  If you cease being a User for any reason you must immediately cease using the Service. You acknowledge that, although we will aim to preserve your Submitted Content for a month after the date on which the Subscription ends, we cannot guarantee it. Therefore we advise that any Submitted Content required after the Subscription ceases is exported prior to that date. We reserve the right to delete Submitted Content permanently one month after your Subscription ends. If you are a Collaborator, you will not be able to access content submitted by any Users whose Subscription has ceased.
 	li
-		p.level-2-number
-			strong Changes to these Terms of Use, the Service and the Service
+		p
+			span(style="font-family: 'Times New Roman', serif;")
+				span(style='font-size: medium;')
+					strong
+						span(style='font-family: Verdana, sans-serif;')
+							span(style='font-size: small;') Changes to these Terms of Use and the Service
 		ol
 			li
 				p.level-2-number
@@ -428,7 +440,7 @@ ol
 					| We may revise these Terms of Use at any time and in the event of such a revision, you may be asked to read and accept the revised Terms of Use at the next time you access the Service.
 			li
 				p.level-2-number
-					| We may update the Service from time to time, and may change the content and/or functionality provided through the Service at any time.
+					| We may update the Service from time to time, and may change the content and/or functionality provided through the Service at any time. If you do not wish to continue with the Service after that date, you may end your Subscription in accordance with clause 11 above.
 			li
 				p.level-2-number
 					| No variation to these Terms of Use may be made save by a variation notified by us as described above, or else in writing signed by you and/or the User and us.
@@ -463,10 +475,51 @@ ol(start='17')
 	li
 		p.level-2-number
 			strong Contact us and complaints
-		ol
-			li
-				p.level-2-number
-					| To contact us, including with any comments or complaints regarding the Service, or if you are concerned that any content accessed through the Service breaches intellectual property or other rights, please contact us using the “Contact Us” section of the Service or email at support@3drepo.org.
 p.level-2-number
-	strong VERSION DATED 31 MAY 2016
+	| To contact us, including with any comments or complaints regarding the Service, or if you are concerned that any content accessed through the Service breaches intellectual property or other rights, please contact us using the “Contact Us” section of the Service or email at support@3drepo.org.
+p.level-2-number
+	strong VERSION DATED 1 AUGUST 2016
+p.level-2-number
+	br
+	br
+p.level-2-number
+	em MODEL CANCELLATION FORM FOR CONSUMERS (see clause 11.2):
+p.level-2-number
+	em
+		| To: 3D Repo Limited of c/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK; support@3drepo.org
+p.level-2-number
+	br
+	br
+p.level-2-number
+	em
+		| I hereby give notice that I cancel my contract for the supply of the 3D Repo service.
+p.level-2-number
+	br
+	br
+p.level-2-number
+	em I registered as a User on: [DATE]
+p.level-2-number
+	em Name of consumer: [NAME]
+p.level-2-number
+	em Address of consumer: [ADDRESS and email address]
+p.level-2-number
+	em Registered username: [USERNAME]
+p.level-2-number
+	em Registered email: [EMAIL]
+p.level-2-number
+	br
+	br
+p.level-2-number
+	em
+		| Signature of consumer (only if this form is notified on paper): ………………………………………..
+p.level-2-number
+	em
+		br
+		| Date: [DATE]
+p.level-2-number
+	br
+	br
+p.level-2-number
+	br
+	br
 p  
