--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -20,6 +20,7 @@ div(class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
 					md-icon.angular-material-icons(ng-if="item.toggleState==='visible'") visibility
 					md-icon.angular-material-icons(ng-if="item.toggleState==='invisible'") visibility_off
 					md-icon.angular-material-icons.parentOfInvisible(aria-label="ParentOfInvisible", ng-if="item.toggleState==='parentOfInvisible'") visibility_off
+			md-divider.treeNodeDivider(ng-if="item")
 
 // Filter list
 div(class="virtualRepeatInfiniteScroll" ng-if="vm.showFilterList && vm.filterItemsFound")
@@ -31,14 +32,16 @@ div(class="virtualRepeatInfiniteScroll" ng-if="vm.showFilterList && vm.filterIte
 		flex=""
 		layout="row"
 		layout-align="start center")
-			// Name
-			div(layout="row", layout-align="start center", flex)
-				div(flex, layout="row", layout-align="start center")
-					p(ng-click="vm.filterItemSelected(item)", ng-class="item.class") {{item.name}}
-				// Toggle visibility
-				md-button.md-icon-button.md-primary.toggleButton(aria-label="Toggle Visible", ng-click="vm.toggleFilterNode(item)")
-					md-icon.angular-material-icons(aria-label="Visible", ng-if="item.toggleState==='visible'") visibility
-					md-icon.angular-material-icons(aria-label="Invisible", ng-if="item.toggleState==='invisible'") visibility_off
+			div(flex)
+				// Name
+				div(layout="row", layout-align="start center", flex)
+					div(flex, layout="row", layout-align="start center")
+						p.filterListNodeName(ng-click="vm.filterItemSelected(item)", ng-class="item.class") {{item.name}}
+					// Toggle visibility
+					md-button.md-icon-button.md-primary.toggleButton(aria-label="Toggle Visible", ng-click="vm.toggleFilterNode(item)")
+						md-icon.angular-material-icons(aria-label="Visible", ng-if="item.toggleState==='visible'") visibility
+						md-icon.angular-material-icons(aria-label="Invisible", ng-if="item.toggleState==='invisible'") visibility_off
+				md-divider.treeNodeDivider(ng-if="item")
 
 .cardInfo(ng-if="vm.showFilterList && !vm.filterItemsFound")
 	p No items found
