--- a/jade/invoice.jade
+++ b/jade/invoice.jade
@@ -44,20 +44,23 @@ html(lang="en" ng-app="3drepo")
 								label 56 Wood Lane
 								label London W12 7SB
 								label United Kingdom
-								label VAT ID: GB 206 9090 15
-								a(href="mailto:support@3drepo.org") support@3drepo.org
+								label VAT registration: GB 206 9090 15
+								label
+									| Email:
+									=" "
+									a(href="mailto:support@3drepo.org") support@3drepo.org
 
-							if billing.pending
-								label.md-display-1.ng-scope Pro-forma
+							span.flex(flex)
 
-							span(flex)
+							div(layout="column", layout-align="end end", class="layout-align-end-end layout-column")
+								img#billingInvoiceLogo(src="#{baseURL}/public/images/logo.png" style="height:57.5px")
+								p.md-display-1.ng-binding 
+														| #{billing.pending ? 'Order confirmation': 'Invoice'}
 
-							//button.md-raised.md-accent.noPrint.md-button.md-ink-ripple(type='button', ng-transclude='', onclick='window.print()', aria-label='Print')
-							//	span.ng-scope Print
-							//	.md-ripple-container
+							//span(flex)
+							//md-button.md-raised.md-accent.noPrint(ng-click="vm.print()") Print
 
-
-						p.md-headline(flex="none", class="flex-none") Invoice
+						#billingGap1
 
 						.billingInfoTitle(layout="row", flex="none", class="billingInfoTitle layout-row flex-none")
 							label(flex="30", class="flex-30") To
@@ -102,7 +105,7 @@ html(lang="en" ng-app="3drepo")
 							label(flex="10", class="ng-binding flex-10") £#{billing.netAmount}
 							label(flex="10", class="ng-binding flex-10") #{billing.taxPercentage}%
 							label(flex="10", class="ng-binding flex-10") £#{billing.taxAmount}
-							label(class="ng-binding") £#{billing.amount}
+							label#billingTotalValue(class="ng-binding") £#{billing.amount}
 
 						if billing.B2B_EU
 							#billingReverseCharge(flex)
