ISSUE #227 - Moved termsAndConditions to terms, added favicon, centred legal pages logo

--- a/frontend/terms/jade/termsText.jade
+++ b/frontend/terms/jade/termsText.jade
@@ -41,7 +41,7 @@ ol
 					|  or
 					=" "
 					strong we
-					| ). We are a limited company registered in England and Wales under company number 09014101, whose registered office is at 3BL c/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK. Our registered VAT number is GB 206 9090 15.
+					| ). We are a limited company registered in England and Wales under company number 09014101, whose registered office is at c/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK. Our registered VAT number is GB 206 9090 15.
 			li
 				p.level-2-number
 					| These Terms of Use constitute a legal agreement between 3D Repo and you as a User (as defined below) of the Service. By accessing the Service using any means, you agree to be bound by these Terms of Use. If you do not agree to abide by these Terms of Use, you may not access the Service.
