--- a/frontend/terms/css/terms.css
+++ b/frontend/terms/css/terms.css
@@ -1,8 +1,8 @@
-terms-and-conditions .md-toolbar-tools img {
+terms .md-toolbar-tools img {
     width: 150px;
 }
 
-terms-and-conditions-text {
+terms-text {
     position: absolute;
     z-index: 3;
     background: #FDFDFD;
