--- a/frontend/account/jade/accountProjectsetting.jade
+++ b/frontend/account/jade/accountProjectsetting.jade
@@ -5,4 +5,27 @@
 				md-button.md-icon-button(ng-click="vm.goBack()")
 					md-icon.angular-material-icons(aria-label="Close dialog") arrow_back
 				h2 Project Settings
+		.userContent
+			div(layout="row")
+				md-input-container(flex)
+					label Latitude
+					input(type="text", ng-model="vm.mapTile.lat")
+				md-input-container(flex)
+					label Longitude
+					input(type="text", ng-model="vm.mapTile.lon")
 
+			div(layout="row")
+				md-input-container(flex)
+					label Sea level
+					input(type="text", ng-model="vm.mapTile.y")
+				md-input-container(flex)
+
+			div(layout="row")
+				md-input-container(flex)
+					label Unit
+					md-select(ng-model="vm.unit", required)
+						md-option(ng-repeat="unit in vm.units", value="{{unit.value}}") {{unit.name}}
+				md-input-container(flex)
+
+			div(layout="row")
+				md-button.md-raised.md-accent(ng-click="vm.save()") Save
