ISSUE #227 - Sign up for T&C link correct, updating billing info stays on same page

--- a/frontend/signUp/jade/signUpForm.jade
+++ b/frontend/signUp/jade/signUpForm.jade
@@ -21,7 +21,7 @@ form#signUpForm
 			p
 				| I agree to the
 				=" "
-				a(target="_blank", href="/termsAndConditions") Terms and Conditions
+				a(target="_blank", href="/terms") Terms and Conditions
 				=" "
 				| and I have read the
 				=" "
