ISSUE #232 - Merged #234, save federation working

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -452,3 +452,8 @@ account-team #accountTeamSubHeader {
 #federationDialog #federatedProjectAccount {
   color: rgba(0, 0, 0, 0.5);
 }
+
+/** Account Federations ***********************************************************************************************/
+account-federations .userContent {
+  margin-bottom: -30px;
+}
