--- a/jade/invoice.jade
+++ b/jade/invoice.jade
@@ -98,10 +98,13 @@ html(lang="en" ng-app="3drepo")
 
 						#billingProductInfo(layout="row", flex="none", class="layout-row flex-none")
 							div(flex="30", layout="column", class="layout-column flex-30", layout-align="start")
-								label #{billing.items[0].description}
+								label 
+									| #{billing.items[0].description}
+									if billing.proRata
+										|   (pro-rata)
 								label#billingPeriod (#{billing.periodStart} to #{billing.periodEnd})
 							label(flex="15", class="ng-binding flex-15") #{billing.items.length}
-							label(flex="15", class="flex-15") £100.00
+							label(flex="15", class="flex-15") £#{billing.unitPrice}
 							label(flex="10", class="ng-binding flex-10") £#{billing.netAmount}
 							label(flex="10", class="ng-binding flex-10") #{billing.taxPercentage}%
 							label(flex="10", class="ng-binding flex-10") £#{billing.taxAmount}
