ISSUE #232 - Created dialog for team to be used by projects and federations

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -14,7 +14,8 @@ div(ng-if="!vm.state.project")
 			account="vm.account"
 			accounts="vm.accounts"
 			on-show-page="vm.showItem(page, callingPage)"
-			quota="vm.quota")
+			quota="vm.quota"
+			subscriptions="vm.subscriptions")
 
 			account-profile(
 			ng-switch-when="profile"
