--- a/frontend/account/jade/accountRepos.jade
+++ b/frontend/account/jade/accountRepos.jade
@@ -17,4 +17,5 @@
 				account="vm.account"
 				accounts="vm.accounts"
 				on-show-page="vm.showItem(page, callingPage)"
-				quota="vm.quota")
+				quota="vm.quota",
+				subscriptions="vm.subscriptions")
