ISSUE #232 - Projects using team dialog

--- a/frontend/account/jade/accountRepos.jade
+++ b/frontend/account/jade/accountRepos.jade
@@ -10,12 +10,13 @@
 				account="vm.account"
 				accounts="vm.accounts"
 				on-show-page="vm.showPage(page, callingPage)"
-				quota="vm.quota")
+				quota="vm.quota"
+				subscriptions="vm.subscriptions")
 
 			md-tab(label="Federations")
 				account-federations(
 				account="vm.account"
 				accounts="vm.accounts"
 				on-show-page="vm.showItem(page, callingPage)"
-				quota="vm.quota",
+				quota="vm.quota"
 				subscriptions="vm.subscriptions")
