--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -3,7 +3,8 @@ input#newProjectFileUploader(type="file")
 
 md-list#accountList(flex, ng-if="vm.projectsExist")
 	// Accounts
-	div(ng-repeat="account in vm.accounts", flex)
+	// Don't show account if it doesn't have any projects - possible when user is a team member of a federation but not a member of a project in that federation!
+	div(ng-repeat="account in vm.accounts", flex, ng-if="account.projects.length!==0")
 		div(layout="row", layout-align="start center")
 			md-list-item(flex="100", layout-fill)
 				.account(ng-click="vm.toggleProjectsList($index)", layout="row", layout-align="start center", md-ink-ripple, layout-fill)
@@ -19,13 +20,14 @@ md-list#accountList(flex, ng-if="vm.projectsExist")
 		md-list.projects(ng-if="account.showProjects")
 			account-project(
 			ng-repeat="project in account.projects"
-			account="account"
+			account="account.name"
 			project="project"
 			on-upload-file="vm.uploadFile(project)"
 			uploaded-file="vm.uploadedFile"
 			on-show-page="vm.showPage(page, callingPage)"
 			on-setup-delete-project="vm.setupDeleteProject(event, project)",
-			quota="vm.quota")
+			quota="vm.quota"
+			subscriptions="vm.subscriptions")
 		md-divider
 
 div(ng-if="!vm.projectsExist")
