--- a/frontend/account/jade/accountInfo.jade
+++ b/frontend/account/jade/accountInfo.jade
@@ -8,7 +8,8 @@
 			div(layout="row", flex="none")
 				img.account-avatar-image(ng-if="vm.hasAvatar", ng-src='{{vm.avatarURL}}')
 				#noAvatarIcon(flex, layout="row")
-					md-icon(ng-if="!vm.hasAvatar", class="fa fa-user")
+					//md-icon(ng-if="!vm.hasAvatar", class="fa fa-user")
+					md-icon.angular-material-icons(ng-if="!vm.hasAvatar") person
 			md-list
 				md-list-item.md-2-line
 					div.md-list-item-text
