--- a/frontend/account/jade/accountProjectsetting.jade
+++ b/frontend/account/jade/accountProjectsetting.jade
@@ -6,6 +6,19 @@
 					md-icon.angular-material-icons(aria-label="Close dialog") arrow_back
 				h2 Project Settings
 		.userContent
+
+			div(layout="row")
+				md-input-container(flex)
+					label Project name
+					input(type="text", ng-model="vm.projectName", disabled)
+				md-input-container(flex)
+
+			div(layout="row")
+				md-input-container(flex)
+					label Project type
+					input(type="text", ng-model="vm.projectType", disabled)
+				md-input-container(flex)
+
 			div(layout="row")
 				md-input-container(flex)
 					label Latitude
