--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -200,7 +200,9 @@ account-info .accountInfoPage .md-button {
 
 /** Avatar Image ******************************************************************************************************/
 .account-avatar-image {
-	width: 100%;
+  height:150px;
+  background: #E8EAF6;
+  margin: auto;
 }
 
 /** Account Menu ******************************************************************************************************/
