--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -6,6 +6,7 @@ div(ng-if="!vm.state.project")
 		first-name="vm.firstName"
 		last-name="vm.lastName"
 		email="vm.email"
+		avatar-url="vm.avatarUrl"
 		item-to-show="vm.itemToShow")
 
 		#accountItem(ng-switch="vm.itemToShow")
