#243 upload avatar api and ui

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -6,7 +6,7 @@ div(ng-if="!vm.state.project")
 		first-name="vm.firstName"
 		last-name="vm.lastName"
 		email="vm.email"
-		avatar-url="vm.avatarUrl"
+		has-avatar="vm.hasAvatar"
 		item-to-show="vm.itemToShow")
 
 		#accountItem(ng-switch="vm.itemToShow")
