--- a/frontend/account/jade/accountInfo.jade
+++ b/frontend/account/jade/accountInfo.jade
@@ -6,9 +6,10 @@
 
 		#accountInfoContent(layout="column")
 			div(layout="row", flex="none")
-				img.account-avatar-image(ng-if="vm.avatarUrl", src='{{vm.avatarUrl}}')
-				#noAvatarIcon(ng-if="!vm.avatarUrl", flex, layout="row")
-					md-icon(class="fa fa-user")
+				img.account-avatar-image(ng-if="vm.avatarUrl && !vm.uploadingAvatar", src='{{vm.avatarUrl}}', ng-click="vm.upload()")
+				md-progress-circular.avatarUploadIcon(md-mode="indeterminate", md-diameter="55", ng-if="vm.uploadingAvatar")
+				#noAvatarIcon(ng-if="!vm.avatarUrl && !vm.uploadingAvatar", flex, layout="row")
+					md-icon(class="fa fa-user", ng-click="vm.upload()")
 			md-list
 				md-list-item.md-2-line
 					div.md-list-item-text
