--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -428,3 +428,51 @@ account-team #accountTeamSubHeader {
 #overQuotaDialog #overQuotaInfo {
   margin: 20px 20px 0;;
 }
+
+/** Revisions Dialog *************************************************************************************************/
+.revisionsDialog {
+  width: 60%;
+}
+
+.revisionsDialog .revision-name-and-author {
+  display: inline-block;
+  width:60%;
+  align-self: flex-start;
+}
+
+.revisionsDialog .revision {
+  font-size:19px;
+  line-height: normal;
+}
+
+.revisionsDialog .desc {
+  line-height: normal;
+  margin-top: 10px;
+}
+
+.revisionsDialog .author {
+  font-size:13px;
+  line-height: normal;
+}
+
+.revisionsDialog .timestamp {
+  display: inline-block;
+  width:40%;
+  align-self: flex-start;
+  text-align: right;
+}
+
+.revisionsDialog .desc {
+  font-size:12px;
+  color: grey;
+}
+
+.revisionsDialog .revision-first-row{
+   display: flex;
+   width: 100%
+}
+.revisionsDialog .revision-item{
+  padding-top: 10px;
+  padding-bottom:15px;
+  width:100%;
+}
