--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -36,7 +36,9 @@ input#newProjectFileUploader(type="file")
 					account="account"
 					project="project"
 					on-upload-file="vm.uploadFile(project)"
-					uploaded-file="vm.uploadedFile"
+					uploaded-file="vm.uploadedFile",
+					upload-tag="vm.uploadTag",
+					upload-desc="vm.uploadDesc"
 					on-show-page="vm.showPage(page, callingPage)"
 					on-setup-delete-project="vm.setupDeleteProject(event, project)",
 					quota="vm.quota")
