--- a/frontend/account/jade/projectDialog.jade
+++ b/frontend/account/jade/projectDialog.jade
@@ -17,9 +17,9 @@ md-dialog.newProjectDialog(aria-label="New project")
 			md-input-container(ng-if="vm.showProjectTypeOtherInput")
 				input(placeholder="Other project type", ng-model="vm.newProjectData.otherType")
 			md-input-container(ng-if="vm.newProjectFileSelected")
-				input(placeholder="Revision name", ng-model="vm.uploadTag")
+				input(placeholder="Revision name", ng-model="vm.tag")
 			md-input-container(ng-if="vm.newProjectFileSelected")
-				textarea(placeholder="Revision description", ng-model="vm.uploadDesc")
+				textarea(placeholder="Revision description", ng-model="vm.desc")
 			md-input-container
 				md-button.md-accent(ng-click="vm.uploadFileForNewProject()") Upload File
 				md-button.md-raised.md-accent(ng-disabled="vm.newProjectButtonDisabled", ng-click="vm.saveNewProject()") Save
