--- a/frontend/account/jade/revisionsDialog.jade
+++ b/frontend/account/jade/revisionsDialog.jade
@@ -6,7 +6,7 @@ md-dialog.revisionsDialog(aria-label="Revisions")
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-list
-		md-list-item(layout-fill, md-ink-ripple, ng-repeat="rev in vm.revisions", ng-click="vm.hello()")
+		md-list-item(layout-fill, md-ink-ripple, ng-repeat="rev in vm.revisions", ng-click="vm.goToVision(rev.tag || rev._id)")
 			div.revision-item
 				div.revision-first-row
 					div.revision-name-and-author
