ISSUE #245 - Legal pages are all now scrollable

--- a/frontend/terms/css/terms.css
+++ b/frontend/terms/css/terms.css
@@ -8,4 +8,7 @@ terms-text {
     background: #FDFDFD;
     color: rgba(0, 0, 0, 0.8);
     padding: 10px 50px;
+    height: calc(100% - 64px);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
