--- a/frontend/privacy/jade/privacy.jade
+++ b/frontend/privacy/jade/privacy.jade
@@ -1,7 +1,8 @@
 md-toolbar
 	.md-toolbar-tools(layout="row", layout-align="space-between center")
-		h2(flex="5") Privacy
+		h2(flex="20") Privacy
 		img(src="/public/images/3drepo-logo-white.png")
-		md-button.md-icon-button(aria-label="Home", ng-click="vm.home()", flex="5")
-			md-icon.angular-material-icons home
+		div(flex="20", layout="row", layout-align="end")
+			md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
+				md-icon.angular-material-icons home
 privacy-text
