#244 revision dropdown in viewer

--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -3,6 +3,11 @@
 		viewermanager
 
 	#projectUI
+		revisions(
+			account="vm.account"
+			project="vm.project"
+			revision="vm.revision"
+		)
 		panel#leftPanel(
 			account="vm.account"
 			project="vm.project"
