ISSUE #235 - Fixed display of non-named nodes

--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -5,7 +5,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 div(class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
 	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex" ng-if="vm.showNodes")
 		.treeNodes(md-virtual-repeat="item in vm.infiniteItemsTree" md-on-demand="" class="repeated-item")
-			div(style="margin-left:{{item.level * 20}}px", ng-if="item.name", layout="row", layout-align="start center", flex)
+			.treeNode(style="margin-left:{{item.level * 20}}px", ng-if="item.name", layout="row", layout-align="start center", flex)
 				// Expand/collapse
 				md-button.md-icon-button.md-primary.expandButton(aria-label="Toggle Expand", ng-click="vm.expand(item._id)")
 					md-icon.angular-material-icons(ng-if="!item.expanded && item.hasChildren") add_box
@@ -20,7 +20,7 @@ div(class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
 					md-icon.angular-material-icons(ng-if="item.toggleState==='visible'") visibility
 					md-icon.angular-material-icons(ng-if="item.toggleState==='invisible'") visibility_off
 					md-icon.angular-material-icons.parentOfInvisible(aria-label="ParentOfInvisible", ng-if="item.toggleState==='parentOfInvisible'") visibility_off
-			md-divider.treeNodeDivider(ng-if="item.name")
+			md-divider(ng-if="item.name")
 
 // Filter list
 div(class="virtualRepeatInfiniteScroll" ng-if="vm.showFilterList && vm.filterItemsFound")
@@ -41,7 +41,7 @@ div(class="virtualRepeatInfiniteScroll" ng-if="vm.showFilterList && vm.filterIte
 					//md-button.md-icon-button.md-primary.toggleButton(aria-label="Toggle Visible", ng-click="vm.toggleFilterNode(item)")
 						md-icon.angular-material-icons(aria-label="Visible", ng-if="item.toggleState==='visible'") visibility
 						md-icon.angular-material-icons(aria-label="Invisible", ng-if="item.toggleState==='invisible'") visibility_off
-				md-divider.treeNodeDivider(ng-if="item")
+				md-divider(ng-if="item")
 
 .cardInfo(ng-if="vm.showFilterList && !vm.filterItemsFound")
 	p No items found
