#244 revisions dropdown show timestamp and highlight in rev in revisions list

--- a/frontend/revisions/css/revisions.css
+++ b/frontend/revisions/css/revisions.css
@@ -69,3 +69,12 @@ revisions {
   padding-bottom:15px;
   width:100%;
 }
+
+.revisionsDialog .current{
+  background-color: #ffffe0;
+}
+
+.revisionsDialog span.current{
+    font-style: italic;
+    font-size: 12px;
+}
