--- a/frontend/revisions/jade/revisionsDialog.jade
+++ b/frontend/revisions/jade/revisionsDialog.jade
@@ -6,12 +6,14 @@ md-dialog.revisionsDialog(aria-label="Revisions")
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-list
-		md-list-item(layout-fill, md-ink-ripple, ng-repeat="rev in vm.revisions", ng-click="vm.goToVision(rev.tag || rev._id)")
+		md-list-item(layout-fill, md-ink-ripple, ng-repeat="rev in vm.revisions", ng-click="vm.goToRevision(rev.tag || rev._id, rev.current)", ng-class="rev.current ? 'current' : ''")
 			div.revision-item
 				div.revision-first-row
 					div.revision-name-and-author
 						div.revision(ng-if="rev.tag") {{rev.tag}} 
-						div.revision(ng-if="!rev.tag") {{rev._id}}
+							span.current(ng-if="rev.current") (current revision)
+						div.revision(ng-if="!rev.tag") {{rev._id}} 
+							span.current(ng-if="rev.current") (current revision)
 						div.author {{rev.author}}
 					div.timestamp {{rev.timestamp | revisionDate }}
 				div.desc {{rev.desc}}
